--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="stylesheet" href="vendor/uikit/css/uikit.min.css"/>
+    <link rel="stylesheet" href="vendor/eni/eni-main.css"/>
+
+    <script src="vendor/uikit/js/uikit.min.js"></script>
+    <script src="vendor/uikit/js/uikit-icons.min.js"></script>
 </head>
 <body>
+
+<div class="uk-flex uk-flex-column uk-background-muted uk-height-viewport" data-uk-height-viewport>
+
+    <section class="uk-section uk-section-muted uk-width-1-1">
+
+        <div class="uk-flex uk-flex-center">
+            <div class="uk-card uk-card-default uk-card-body uk-width-large uk-padding">
+
+                <!-- Affichage des erreurs -->
+                <div th:if="${param.error}" class="uk-alert-danger" uk-alert>
+                    <p th:text="#{app.auth.login.error}"></p>
+                </div>
+
+                <!-- Affichage du logout -->
+                <div th:if="${param.logout}" class="uk-alert-primary" uk-alert>
+                    <p th:text="#{app.auth.logout.info}"></p>
+                </div>
+
+                <!-- login -->
+                <form th:action="@{/perform_login}" method="post">
+
+                    <!-- Title -->
+                    <h1 class="uk-heading-medium uk-text-center uk-margin-remove-bottom uk-padding-small"
+                        th:text="#{app.auth.title}"></h1>
+                    <hr class="uk-divider-icon uk-margin-small-top">
+
+                    <div class="uk-margin-small">
+                        <div class="uk-inline uk-width-1-1">
+                            <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: user"></span>
+                            <input class="uk-input uk-border-pill"
+                                   th:placeholder="#{app.field.email.label}"
+                                   name="username"
+                                   type="text">
+                        </div>
+                    </div>
+                    <div class="uk-margin-small">
+                        <div class="uk-inline uk-width-1-1">
+                            <span class="uk-form-icon uk-form-icon-flip" data-uk-icon="icon: lock"></span>
+                            <input class="uk-input uk-border-pill"
+                                   th:placeholder="#{app.field.password.label}"
+                                   name="password"
+                                   type="password">
+                        </div>
+                    </div>
+
+                    <div class="uk-margin">
+                        <label><input class="uk-checkbox" type="checkbox" name="remember-me"> Se souvenir de
+                            moi</label>
+                    </div>
+
+
+                    <div class="uk-margin-bottom">
+                        <button type="submit"
+                                class="uk-button uk-button-primary uk-border-pill uk-width-1-1" value="Submit"
+                                th:text="#{app.button.log_in}">LOG IN
+                        </button>
+                    </div>
+
+                    <div class="uk-margin-bottom">
+                        <a class="uk-button uk-button-primary uk-border-pill uk-width-1-1" th:href="@{/sign-up}"
+                           th:text="#{app.button.signup}"></a>
+                    </div>
+
+                </form>
+                <!-- /login -->
+            </div>
+        </div>
+    </section>
+</div>
 
 </body>
 </html>
